--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,31 @@
-Flask==2.1.1
-gunicorn==20.1.0
+aiohttp==3.8.3
+aiosignal==1.3.1
+argon2-cffi-bindings==21.2.0
+argon2-cffi==21.3.0
+async-timeout==4.0.2
+attrs==22.2.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6 ; platform_system == "Windows"
+cryptography==38.0.4
+flask==2.2.2
+frozenlist==1.3.3
+idna==3.4
+iso8601==1.1.0
+itsdangerous==2.1.2
+jinja2==3.1.2
+markupsafe==2.1.2
+multidict==6.0.4
+passlib[argon2]==1.7.4
+protobuf==4.21.12
+pycparser==2.21
+pycryptodomex==3.16.0
+pyseto==1.7.0
+replit==3.2.5
+requests==2.28.2
+typing-extensions==3.10.0.2
+urllib3==1.26.14
+werkzeug==2.2.2
+yarl==1.8.2
