--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,6 +17,9 @@
         }
       }
     },
+    "remoteEnv": {
+    "GOOGLE_MAPS_API_KEY": "${secrets.GOOGLE_MAPS_API_KEY}"
+    },
     
     // (Optional) Run commands after the container starts
     "postStartCommand": "source ~/.bashrc"
